<resources>
    <string name="app_name">FlagTest</string>

    <string name="incorrect_answer">Incorrect!</string>
    <string name="todo">TODO</string>
    <string name="new_test">New Test</string>
    <string name="textview">TextView</string>
    <string name="button3">Button</string>
    <string name="button2">Button</string>
    <string name="button1">Button</string>
    <string name="guess_the_flag">Guess the Flag</string>
</resources>